--- a/FaceAlignment/CMakeLists.txt
+++ b/FaceAlignment/CMakeLists.txt
@@ -16,14 +16,18 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse4.1")
 
 include_directories(include)
-
 set(src_files 
     src/cfan.cpp
     src/face_alignment.cpp
     src/sift.cpp
     )
 
+set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+
 add_library(seeta_fa_lib SHARED ${src_files})
+
+link_directories(${PROJECT_SOURCE_DIR}/lib)
 set(fa_required_libs seeta_fa_lib)
 
 if (BUILD_EXAMPLES)
