--- a/FaceDetection/CMakeLists.txt
+++ b/FaceDetection/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1.0)
 
-project(seeta_facedet_lib)
+project(SeetaFaceDetection)
 
 # Build options
 option(BUILD_EXAMPLES  "Set to ON to build examples"  ON)
