--- a/FaceIdentification/src/test/CMakeLists.txt
+++ b/FaceIdentification/src/test/CMakeLists.txt
@@ -5,10 +5,11 @@ message(${SRC_LIST})
 # add external libraries
 find_package(OpenCV REQUIRED)
 
+set(depend_libs seeta_facedet_lib seeta_fa_lib)
 enable_testing ()
 foreach (f ${SRC_LIST})
   string(REGEX REPLACE "[.]cpp" ".bin" BIN ${f})
   add_executable(${BIN} ${f})
-  target_link_libraries(${BIN} viplnet ${OpenCV_LIBS})
+  target_link_libraries(${BIN} viplnet ${OpenCV_LIBS} ${depend_libs})
 endforeach ()
 
