--- a/FaceAlignment/CMakeLists.txt
+++ b/FaceAlignment/CMakeLists.txt
@@ -31,15 +31,16 @@ set(fa_required_libs seeta_fa_lib)
 
 if (BUILD_EXAMPLES)
     message(STATUS "Build with examples.")
-    find_package(OpenCV)
-    if (NOT OpenCV_FOUND)
-        message(WARNING "OpenCV not found. Test will not be built.")
-    else()
-        include_directories(${OpenCV_INCLUDE_DIRS} build)
-	link_directories(build)
-        list(APPEND fa_required_libs ${OpenCV_LIBS} seeta_facedet_lib)
+    #find_package(OpenCV)
+    #if (NOT OpenCV_FOUND)
+      #  message(WARNING "OpenCV not found. Test will not be built.")
+    #else()
+        #include_directories(${OpenCV_INCLUDE_DIRS} build)
+	#link_directories(build)
+        set(opencv_libs opencv_core opencv_highgui opencv_imgproc opencv_imgcodecs)
+        list(APPEND fa_required_libs ${opencv_libs} seeta_facedet_lib)
         link_directories(${PROJECT_SOURCE_DIR}/lib)
         add_executable(fa_test src/test/face_alignment_test.cpp)
         target_link_libraries(fa_test ${fa_required_libs})
-    endif()
+    #endif()
 endif()
