--- a/FaceDetection/CMakeLists.txt
+++ b/FaceDetection/CMakeLists.txt
@@ -57,15 +57,16 @@ set(facedet_required_libs seeta_facedet_lib)
 # Build examples
 if (BUILD_EXAMPLES)
     message(STATUS "Build with examples.")
-    find_package(OpenCV)
-    if (NOT OpenCV_FOUND)
-        message(WARNING "OpenCV not found. Test will not be built.")
-    else()
-        include_directories(${OpenCV_INCLUDE_DIRS})
-        list(APPEND facedet_required_libs ${OpenCV_LIBS})
+    #find_package(OpenCV)
+    #if (NOT OpenCV_FOUND)
+    #    message(WARNING "OpenCV not found. Test will not be built.")
+    #else()
+        #include_directories(${OpenCV_INCLUDE_DIRS})
+        set(opencv_libs opencv_core opencv_highgui opencv_imgproc opencv_imgcodecs)
+        list(APPEND facedet_required_libs ${opencv_libs})
         set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
         link_directories(${PROJECT_SOURCE_DIR}/lib)
         add_executable(facedet_test src/test/facedetection_test.cpp)
         target_link_libraries(facedet_test ${facedet_required_libs})
-    endif()
+    #endif()
 endif()
