--- a/FaceAlignment/CMakeLists.txt
+++ b/FaceAlignment/CMakeLists.txt
@@ -41,5 +41,5 @@ if (BUILD_EXAMPLES)
         list(APPEND fa_required_libs ${OpenCV_LIBS} seeta_facedet_lib)
         add_executable(fa_test src/test/face_alignment_test.cpp)
         target_link_libraries(fa_test ${fa_required_libs})
-    #endif()
+    endif()
 endif()
